implemented the module of the models validation